--- a/Mart/20/lab4.html
+++ b/Mart/20/lab4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Laboratoriya 4.1</title>
+        <title>Laboratoriya işleri</title>
         <style>
             p,a{
                font-family: Georgia, 'Times New Roman', Times, serif;  
@@ -12,9 +12,9 @@
         <img src="https://cdn-icons-png.flaticon.com/512/5968/5968332.png" alt="php icon" width="150px">
         <br>
         <p>Xədicə Qurbanlı Laboratoriya 4.1</p>
-        <a href="https://onlinephp.io/c/2eebb" target="_blank"><i>Lab 4.1</i></a>
+        <a href="https://onlinephp.io/c/7d4b3" target="_blank"><i>Lab 4.1</i></a>
         <p>Xədicə Qurbanlı adına Laboratoriya 4.2</p>
-        <a href="https://onlinephp.io/c/2eebb" target="_blank"><i>Lab 4.2</i></a>
+        <a href="https://onlinephp.io/c/20764" target="_blank"><i>Lab 4.2</i></a>
 
     </body>
 </html>
