--- a/Aprel/16/js.html
+++ b/Aprel/16/js.html
@@ -16,9 +16,10 @@ function validateForm() {
 <h2>JavaScript Validation</h2>
 
 <form name="myForm" onsubmit="return validateForm()">
- Name: <input type="text" name="fname" required>
-  <input type="submit" value="Submit">
+<label>Name:</label>
+<span id="error-message" style="color: red">*</span><br>
+<input type="text" name="fname" required>
+<input type="submit" value="Submit">
 </form>
-<span id="error-message" style="color: red"></span>
 </body>
 </html>
